--- a/Main.html
+++ b/Main.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="header-content row">
             <div class="header-content-logo">
-                <a href=""><img src="./images/logo.png" alt=""></a>
+                <a href=""><img src="./images/Logo 2.jpg" alt=""></a>
             </div>
             <div class="header-content-nav">
                 <ul>
