--- a/Main.html
+++ b/Main.html
@@ -100,6 +100,7 @@
         </div>
     </div>
 </section>
+<!--------------------------------First Section----------------  -->
 <section id="cartegory" class="cartegory">
     <div class="container">
         <div class="cartegory-content row">
@@ -121,6 +122,7 @@
 <section class="product">
     <div class="container">
         <h1 class="title_h1">Sản Phẩm</h1>
+<!--------------------------------Product : Paint----------------  -->
     <div class="product-items">
         <h2 class="title_h2">Giày</h2>
         <div class="product-content owl-carousel owl-theme">
@@ -276,6 +278,7 @@
             </div>
         </div>
     </div>
+<!--------------------------------Product : Shirt----------------  -->
     <div class="product-items">
         <h2 class="title_h2">Áo</h2>
         <div class="product-content owl-carousel owl-theme">
@@ -431,6 +434,7 @@
             </div>
         </div>
     </div>
+<!--------------------------------Product : Shoes----------------  -->
     <div class="product-items">
         <h2 class="title_h2">Quần</h2>
         <div class="product-content owl-carousel owl-theme">
