--- a/BST.html
+++ b/BST.html
@@ -5,20 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/54f0cb7e4a.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="mainstyle.css">
+    <link rel="stylesheet" href="./css/BST.css">
+    <link rel="stylesheet" href="./Bootstrap/owl.carousel.min.css">
+    <link rel="stylesheet" href="./Bootstrap/owl.theme.default.min.css">
     <title>Website Trang danh mục</title>
 </head>
 <body>
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href=".css/style.css">
-        <script src="https://kit.fontawesome.com/54f0cb7e4a.js" crossorigin="anonymous"></script>
-        <link rel="stylesheet" href="./Bootstrap/owl.carousel.min.css">
-        <link rel="stylesheet" href="./Bootstrap/owl.theme.default.min.css">
-        <title>Document</title>
-    </head>
     <!--------------------------------header----------------  -->
     <header>
         <div class="container">
@@ -177,6 +169,6 @@
         </div>
 </footer>
 
-<script src="./js/script1.js"></script>
+<script src="./js/BST.js"></script>
 </body>
 </html>                     
