--- a/SP1.html
+++ b/SP1.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/54f0cb7e4a.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./css/mainstyle1.css">
+    <link rel="stylesheet" href="./css/SP.css">
     <title>Website - Ivy</title>
 </head>
 <body>
@@ -221,7 +221,7 @@ Màu sắc: Trắng
         </div>
 </footer>
 
-<script src="./js/script2.js"></script>
+<script src="./js/SP1.js"></script>
 
 </body>
 </html>                     
