Chinh trang chu

--- a/index.html
+++ b/index.html
@@ -86,24 +86,24 @@
     </header>
 
 <section class="cartegory">
-       
-            <div class="row">
-                <div class="cartegory-left">
-                    <ul>
-                        
-                        <li class="cartegory-left-li"><span onclick="menuClick('2')">Giày</span>
-                        </li>
-                        <li class="cartegory-left-li">
-                            <span onclick="menuClick('1')">Áo</span>
-                        </li>
-                        <li class="cartegory-left-li"><a href="">BỘ SƯU TẬP</a></li>
-                    </ul>
-
-                </div>
-                <div id="content" ></div>
-
-
-
+    <div class="row">
+        <div class="cartegory-left">
+            <ul>
+                <li class="cartegory-left-li"onclick="menuClick('2')"><span >Giày</span>
+                </li>
+                <li class="cartegory-left-li" onclick="menuClick('1')">
+                    <span >Áo</span>
+                </li>
+                <a href="" class="cartegory-left-li">BỘ SƯU TẬP</a>
+            </ul>
+        </div>
+    <div id="content">
+        <!-- <div style='Display:block ;width:300px;float:left; '>
+            <a href="/detail/${row['id']}"><img style="width:300px" src='/images/${row[' Image']}' /></a>
+            <div style="text-align:center;line-height: 30px;"><b>${row['Name']}</b></div>
+            <div style="text-align:center"><span style="color:black"> ${row['Gia']}$</span> </div>
+        </div> -->
+    </div>
 </section>
   <!-- -------------------------Footer---------------- -->
   <footer>
