--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             
         }
     </script>
+    <title>Index Page</title>
 </head>
 <body> 
     <!--------------------------------header----------------  -->
@@ -89,12 +90,16 @@
     <div class="row">
         <div class="cartegory-left">
             <ul>
-                <li class="cartegory-left-li"onclick="menuClick('2')"><span >Giày</span>
+                <li class="cartegory-left-li cartegory-shoes"onclick="menuClick('1')">
+                    <span >Giày</span>
                 </li>
-                <li class="cartegory-left-li" onclick="menuClick('1')">
+                <li class="cartegory-left-li cartegory-shirt" onclick="menuClick('2')">
                     <span >Áo</span>
                 </li>
-                <a href="" class="cartegory-left-li">BỘ SƯU TẬP</a>
+                <li class="cartegory-left-li cartegory-paint" onclick="menuClick('3')">
+                    <span >Quần</span>
+                </li>
+                <a href="" class="cartegory-left-li cartegory-BST">BỘ SƯU TẬP</a>
             </ul>
         </div>
     <div id="content">
@@ -146,7 +151,5 @@
         </div>
     </div>
 </footer>
-
-<script src="../js/BST.js"></script>
 </body>
 </html>
