Hoành thành chuc nang Đăng Ký

--- a/Login.html
+++ b/Login.html
@@ -28,7 +28,7 @@
         </p>
       </form>
       <form class="login-form">
-        <h2>SIGN IN<style></style>
+        <h2>LOG IN<style></style>
         </h2>
         <input type="text" placeholder="UserName" id="user" /><br />
         <input type="password" placeholder="Password" id="password" /><br />
