--- a/shoppingcart.html
+++ b/shoppingcart.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="../Bootstrap/owl.theme.default.min.css">
     <link rel="stylesheet" href="../css/shoppingcart.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="./jquery/shoppingcartJquery.js"></script>
 </head>
 
 <body>
@@ -35,13 +36,14 @@
                 <div class="header-content-icon">
                     <img src="../images/shopping.png" alt="">
                     <img src="../images/user.png" alt="">
-
                 </div>
             </div>
         </div>
     </header>
     <!-- ------------------------ Section -------------- -->
-    
+    <section>
+        <div id="content"></div>
+    </section>
     <!-- -------------------------Footer---------------- -->
     <footer>
         <div class="container">
