Hoan thanh shoping

--- a/blogs.html
+++ b/blogs.html
@@ -9,23 +9,10 @@
     <link rel="stylesheet" href="../Bootstrap/owl.carousel.min.css">
     <link rel="stylesheet" href="../Bootstrap/owl.theme.default.min.css">
     <link rel="stylesheet" href="../css/blogs.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<<<<<<< HEAD
-    <script>
-        $(document).ready(function(){
-            $.get("getblogs/", function(data, status){
-              $('#conten').html(data);
-            });
-        });
-
-        
- 
-    </script>
-    
-   
-=======
     <script src = "./jquery/blogJquery.js"></script>
->>>>>>> 9a3a8d8d12f7f5201fc9e26b6c72ee1a0eeaf2af
 </head>
 
 <body>
@@ -71,14 +58,15 @@
 
 </section>
     <!-- -------------------------Footer---------------- -->
-    <footer>
+      <!-- -------------------------Footer---------------- -->
+      <footer>
         <div class="container">
             <div class="footer-content row">
                 <div class="footer-content-item">
                     <h3>THÔNG TIN</h3>
-                    <p>CÔNG TY TNHH THỜI TRANG ABC</p>
-                    <p>72 Hàm Nghi - Thanh Khê - Đà Nẵng</p>
-                    <p>18002091</p>
+                    <p>Shop Thời Trang</p>
+                    <p>11 Quận 1  TPHCM</p>
+                    <p>18009999</p>
                     <p>support@abc.vn</p>
                     <p>Mst: 0401223344</p>
                 </div>
@@ -86,8 +74,6 @@
                     <h3>LIÊN HỆ</h3>
                     <p>Giới thiệu</p>
                     <p>Liên hệ với chúng tôi</p>
-                    <p>Tin tức</p>
-                    <p>Hệ thống cửa hàng</p>
                     <p>Trợ giúp</p>
                 </div>
                 <div class="footer-content-item">
@@ -107,7 +93,7 @@
             </div>
 
             <div class="footer-img">
-                <img src="../images/bocongthuong.png" alt="">
+                <img src="./images/bocongthuong.png" alt="">
             </div>
         </div>
     </footer>
