--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="../Bootstrap/owl.carousel.min.css">
     <link rel="stylesheet" href="../Bootstrap/owl.theme.default.min.css">
     <link rel="stylesheet" href="../css/contact.css">
+    <link rel="stylesheet" href="../css/header.css">
+    <link rel="stylesheet" href="../css/footer.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
    
 </head>
@@ -44,14 +46,15 @@
     </header>
 
     <!-- -------------------------Footer---------------- -->
+    <!-- -------------------------Footer---------------- -->
     <footer>
         <div class="container">
             <div class="footer-content row">
                 <div class="footer-content-item">
                     <h3>THÔNG TIN</h3>
-                    <p>CÔNG TY TNHH THỜI TRANG ABC</p>
-                    <p>72 Hàm Nghi - Thanh Khê - Đà Nẵng</p>
-                    <p>18002091</p>
+                    <p>Shop Thời Trang</p>
+                    <p>11 Quận 1  TPHCM</p>
+                    <p>18009999</p>
                     <p>support@abc.vn</p>
                     <p>Mst: 0401223344</p>
                 </div>
@@ -59,8 +62,6 @@
                     <h3>LIÊN HỆ</h3>
                     <p>Giới thiệu</p>
                     <p>Liên hệ với chúng tôi</p>
-                    <p>Tin tức</p>
-                    <p>Hệ thống cửa hàng</p>
                     <p>Trợ giúp</p>
                 </div>
                 <div class="footer-content-item">
@@ -80,11 +81,10 @@
             </div>
 
             <div class="footer-img">
-                <img src="../images/bocongthuong.png" alt="">
+                <img src="./images/bocongthuong.png" alt="">
             </div>
         </div>
     </footer>
-
    
 </body>
 
