--- a/contact.html
+++ b/contact.html
@@ -18,18 +18,19 @@
 <body>
     <!--------------------------------header----------------  -->
     <header>
+
         <div class="container">
             <div class="header-content row">
                 <div class="header-content-logo">
-                    <a href="/index"><img src="../images/Logo 2.jpg" alt=""></a>
+                    <a href="/index"><img src="./images/Logo 2.jpg" alt="" ></a>
                 </div>
                 <div class="header-content-nav">
                     <ul>
-                        <li><a href="/index">Trang Chủ</a></li>
-                        <li><a href="#cartegory">Bộ Sưu Tập</a></li>
+                        <li><a href="/homepage">Trang Chủ</a></li>
+                        <li><a href="/index">Bộ Sưu Tập</a></li>
                         <li><a href="/blogs">Blogs</a></li>
 
-                        <li><a href="/contact">Liện Hệ</a></li>
+                        <li><a href="/contact">Contact</a></li>
                     </ul>
                 </div>
                 <div class="header-content-search">
@@ -37,14 +38,82 @@
                     <i class="fas fa-search"></i>
                 </div>
                 <div class="header-content-icon">
-                    <img src="../images/shopping.png" alt="">
-                    <img src="../images/user.png" alt="">
-
+                    <a href="./shoppingcard"><img src="./images/shopping.png" alt=""></a>
+                    <a href="./login"><img src="./images/user.png" alt=""></a>
+                    <div id ="hello_text">
+                        <p>Xin chào : <span id="user"></span></p>
+                    </div>
+                    <!-- <input type="button" value="Log Out" onclick="logout()" />  -->
                 </div>
+
             </div>
         </div>
-    </header>
 
+    </header>
+    
+    <section>
+        
+        <!-- Kết thúc đoạn mã mới-->
+    </div>
+        <div class="container">
+            <div class="containerinfo">
+                <div>
+                    <h2>Thông Tin Liên Hệ</h2>
+                    <ul class="info">
+                    <li>
+                        <span><i class="fa fa-map-marker" aria-hidden="true"></i></span>
+                        <span>Đường 1234 TAP<br/>
+                        Thành Phố Thủ Đức,<br />
+                        Thành Phố Hồ Chí Minh
+                        </span>
+                    </li>
+                    <li>
+                        <span><i class="fa fa-envelope" aria-hidden="true"></i></span>
+                        <span>TAP@gmail.com</span>
+                    </li>
+                    <li>
+                        <span><i class="fa fa-phone-square" aria-hidden="true"></i></span>
+                        <span>012-345-6789</span>
+                    </li>
+                    </ul>
+                </div>
+            <ul class="sci">
+                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
+                <li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
+                <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
+                <li><a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a></li>
+                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
+            </ul>
+        </div>
+        <div class="containerForm">
+            <h2>Gửi Lời Nhắn</h2>
+            <div class="formBox">
+                <div class="inputBox w50">
+                    <input type="text" name="" required>
+                    <span>Họ</span>
+                </div>
+                <div class="inputBox w50">
+                    <input type="text" name="" required>
+                    <span>Tên</span>
+                </div>
+                <div class="inputBox w50">
+                    <input type="text" name="" required>
+                    <span>Email</span>
+                </div>
+                <div class="inputBox w50">
+                    <input type="text" name="" required>
+                    <span>Số Điện Thoại</span>
+                </div>
+                <div class="inputBox w100">
+                    <textarea name="" required></textarea>
+                    <span>Lời Nhắn Của Bạn....</span>
+                </div>
+                <div class="inputBox w100">
+                    <input type="submit" value="Gửi">
+                </div>
+            </div>
+    </div>
+    </section>
     <!-- -------------------------Footer---------------- -->
     <!-- -------------------------Footer---------------- -->
     <footer>
@@ -89,3 +158,5 @@
 </body>
 
 </html>
+
+
