--- a/detail.html
+++ b/detail.html
@@ -17,19 +17,21 @@
 
 <body>
     <!--------------------------------header----------------  -->
-    <header>
+     <!--------------------------------header----------------  -->
+     <header>
+
         <div class="container">
             <div class="header-content row">
                 <div class="header-content-logo">
-                    <a href="/index"><img src="../images/Logo 2.jpg" alt=""></a>
+                    <a href="/index"><img src="./images/Logo 2.jpg" alt="" ></a>
                 </div>
                 <div class="header-content-nav">
                     <ul>
-                        <li><a href="/index">Trang Chủ</a></li>
-                        <li><a href="#cartegory">Bộ Sưu Tập</a></li>
+                        <li><a href="/homepage">Trang Chủ</a></li>
+                        <li><a href="/index">Bộ Sưu Tập</a></li>
                         <li><a href="/blogs">Blogs</a></li>
 
-                        <li><a href="/contact">Liện Hệ</a></li>
+                        <li><a href="/contact">Contact</a></li>
                     </ul>
                 </div>
                 <div class="header-content-search">
@@ -37,14 +39,17 @@
                     <i class="fas fa-search"></i>
                 </div>
                 <div class="header-content-icon">
-                    <a href="../shopping-card"> <img src="../images/shopping.png" alt="" ></a>
-                    <a href="./login"><img src="../images/user.png" alt=""></a>
+                    <a href="./shoppingcard"><img src="./images/shopping.png" alt=""></a>
+                    <a href="./login"><img src="./images/user.png" alt=""></a>
                     <div id ="hello_text">
-                         <span id="user"></span></p>
+                        <p>Xin chào : <span id="user"></span></p>
                     </div>
+                    <!-- <input type="button" value="Log Out" onclick="logout()" />  -->
                 </div>
+
             </div>
         </div>
+
     </header>
      <!--------------------------------header----------------  -->
     <section class="product">
