--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <a href="./shoppingcard"><img src="./images/shopping.png" alt=""></a>
                     <a href="./login"><img src="./images/user.png" alt=""></a>
                     <div id ="hello_text">
-                        <p>Xin chào <span id="user"></span></>
+                        <p>Xin chào <span id="user"></span>
                     </div>
                     <!-- <input type="button" value="Log Out" onclick="logout()" />  -->
                 </div>
