--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
                 <div class="header-content-nav">
                     <ul>
-                        <li><a href="/index">Trang Chủ</a></li>
+                        <li><a href="/homepage">Trang Chủ</a></li>
                         <li><a href="/index">Bộ Sưu Tập</a></li>
                         <li><a href="/blogs">Blogs</a></li>
 
