--- a/blogs.html
+++ b/blogs.html
@@ -8,9 +8,9 @@
     <script src="https://kit.fontawesome.com/54f0cb7e4a.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../Bootstrap/owl.carousel.min.css">
     <link rel="stylesheet" href="../Bootstrap/owl.theme.default.min.css">
-    <link rel="stylesheet" href="../css/blogs.css">
     <link rel="stylesheet" href="../css/header.css">
     <link rel="stylesheet" href="../css/footer.css">
+    <link rel="stylesheet" href="../css/homepage.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src = "./jquery/blogJquery.js"></script>
 </head>
@@ -18,17 +18,19 @@
 <body>
     <!--------------------------------header----------------  -->
     <header>
+
         <div class="container">
             <div class="header-content row">
                 <div class="header-content-logo">
-                    <a href="/index"><img src="../images/Logo 2.jpg" alt=""></a>
+                    <a href="/index"><img src="./images/Logo 2.jpg" alt="" ></a>
                 </div>
                 <div class="header-content-nav">
                     <ul>
-                        <li><a href="/index">Trang Chủ</a></li>
+                        <li><a href="/homepage">Trang Chủ</a></li>
                         <li><a href="/index">Bộ Sưu Tập</a></li>
                         <li><a href="/blogs">Blogs</a></li>
-                        <li><a href="/contact">Liện Hệ</a></li>
+
+                        <li><a href="/contact">Contact</a></li>
                     </ul>
                 </div>
                 <div class="header-content-search">
@@ -36,21 +38,22 @@
                     <i class="fas fa-search"></i>
                 </div>
                 <div class="header-content-icon">
-                    <img src="../images/shopping.png" alt="">
-                    <img src="../images/user.png" alt="">
-
+                    <a href="./shoppingcard"><img src="./images/shopping.png" alt=""></a>
+                    <a href="./login"><img src="./images/user.png" alt=""></a>
+                    <div id ="hello_text">
+                        <p>Xin chào <span id="user"></span>
+                    </div>
+                    <!-- <input type="button" value="Log Out" onclick="logout()" />  -->
                 </div>
+
             </div>
         </div>
+
     </header>
-    <section class="cartegory">
-        <div class="row">
-            <div id="content"></div>
-        </div>
-</section>
-    <!-- -------------------------Footer---------------- -->
-      <!-- -------------------------Footer---------------- -->
-      <footer>
+    <!-- -----------------------SLlDER---------------------------------------------- -->
+   
+     <!-- -------------------------Footer---------------- -->
+     <footer>
         <div class="container">
             <div class="footer-content row">
                 <div class="footer-content-item">
@@ -90,4 +93,4 @@
     </footer>
 </body>
 
-</html>
+</html>     
