--- a/contact.html
+++ b/contact.html
@@ -31,14 +31,14 @@
         <div class="container">
             <div class="header-content row">
                 <div class="header-content-logo">
-                    <a href="/index"><img src="../images/Logo 2.jpg" alt=""></a>
-                 
+                    <a href="/index"><img src="./images/Logo 2.jpg" alt="" ></a>
                 </div>
                 <div class="header-content-nav">
                     <ul>
                         <li><a href="/homepage">Trang Chủ</a></li>
                         <li><a href="/index">Bộ Sưu Tập</a></li>
                         <li><a href="/blogs">Blogs</a></li>
+
                         <li><a href="/contact">Contact</a></li>
                     </ul>
                 </div>
@@ -50,13 +50,14 @@
                     <a href="./shoppingcard"><img src="./images/shopping.png" alt=""></a>
                     <a href="./login"><img src="./images/user.png" alt=""></a>
                     <div id ="hello_text">
-                        <p>Xin chào : <span id="user"></span></p>
+                        <p>Xin chào <span id="user"></span>
                     </div>
                     <!-- <input type="button" value="Log Out" onclick="logout()" />  -->
                 </div>
 
             </div>
         </div>
+
     </header>
 
     <section>
