--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <ul>
                         <li><a href="/index">Trang Chủ</a></li>
                         <li><a href="#cartegory">Bộ Sưu Tập</a></li>
-                        <li><a href="/blogs" target="_blank">Blogs</a></li>
+                        <li><a href="/blogs" >Blogs</a></li>
 
                         <li><a href="/contact">Contact</a></li>
                     </ul>
