--- a/homepage.html
+++ b/homepage.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="../css/footer.css">
     <link rel="stylesheet" href="../css/homepage.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <title>Home Page</title>
     <!-- <script src = "./jquery/blogJquery.js"></script> -->
     <script>
         $(document).ready(function () {
