--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
                 </div>
                 <div class="header-content-icon">
                     <a href="./shoppingcard"><img src="./images/shopping.png" alt=""></a>
-                    <a href="./login"><img src="./images/user.png" alt=""></a>
+                    <a href="./profile"><img src="./images/user.png" alt=""></a>
+                    <a href="./login"><button style = "width: 50px; height: 20px">Out</button></a>
                     <div id ="hello_text">
                         <p>Xin chào <span id="user"></span>
                     </div>
