--- a/admin.html
+++ b/admin.html
@@ -39,6 +39,13 @@
                         Khách Hàng
                     </a>
                 </li>
+
+                <li>
+                    <a href="#" id = "ContactId" onclick="getData(5)">
+                        <img style="width:20px" src="./images/membership.png" alt="">
+                        Liên hệ
+                    </a>
+                </li>
                
                 <li><a href="/login" id = "Log_Out"> <img style="width:20px" src="./images/logout.png" alt="">Đăng Xuất</a>
                     
