--- a/detail.html
+++ b/detail.html
@@ -23,7 +23,7 @@
         <div class="container">
             <div class="header-content row">
                 <div class="header-content-logo">
-                    <a href="/index"><img src="./images/Logo 2.jpg" alt="" ></a>
+                    <a href="/index"><img src="../images/Logo 2.jpg" alt="" ></a>
                 </div>
                 <div class="header-content-nav">
                     <ul>
@@ -39,8 +39,8 @@
                 </div>
                 <div class="header-content-icon">
 
-                    <a href="./shoppingcard"><img src="./images/shopping.png" alt=""></a>
-                    <a href="./login"><img src="./images/user.png" alt=""></a>
+                    <a href="/shoppingcard"><img src="../images/shopping.png" alt=""></a>
+                    <a href="/login"><img src="../images/user.png" alt=""></a>
 
                     <div id ="hello_text">
                         <p>Xin chào : <span id="user"></span></p>
