--- a/homepage.html
+++ b/homepage.html
@@ -51,8 +51,9 @@
                     <i class="fas fa-search"></i>
                 </div>
                 <div class="header-content-icon">
-                    <a href="./shoppingcard"><img src="./images/shopping.png" alt=""></a>
-                    <a href="./login"><img src="./images/user.png" alt=""></a>
+                    <a href="/shoppingcard"><img src="./images/shopping.png" alt=""></a>
+                    <a href="/profile"><img src="./images/user.png" alt=""></a>
+                    <a href="/login"><button style="width: 50px; height: 20px">Out</button></a>
                     <div id ="hello_text">
                         <p>Xin chào <span id="user"></span>
                     </div>
@@ -66,9 +67,9 @@
     <!-- -----------------------SLlDER---------------------------------------------- -->
     <section class="sliders">
             <div class="aspect-ratio-169">
-                <img src="images/anh1.jpg" alt="">
-                <img src="images/a1.jpg" alt="">
-                <img src="images/Holy-Grail-1.jpg" alt="">
+                <a href="/index"><img src="images/anh1.jpg" alt=""></a>
+                <a href="/index"><img src="images/a1.jpg" alt=""></a>
+                <a href="/index"><img src="images/Sticker.jpg" alt=""></a>
             </div>
             <div class="dot-container">
                 <div class="dot active"></div>
