--- a/shoppingcard.html
+++ b/shoppingcard.html
@@ -40,8 +40,10 @@
                     <i class="fas fa-search"></i>
                 </div>
                 <div class="header-content-icon">
-                    <a href="./shoppingcard"><img src="./images/shopping.png" alt=""></a>
-                    <a href="./login"><img src="./images/user.png" alt=""></a>
+                    <a href="/shoppingcard"><img src="./images/shopping.png" alt=""></a>
+                    <a href="/profile"><img src="./images/user.png" alt=""></a>
+                    <a href="/login"><button style="width: 50px; height: 20px">Out</button></a>
+
                     <div id ="hello_text">
                         <p>Xin chào <span id="user"></span>
                     </div>
@@ -77,9 +79,9 @@
     <div id="pay">
         <div > <h3>Tổng Tiền:<span id = "thanhToan">0$</span> </h3></div>
      <!-- <input type="button" value="mua hang" onclick="buyProducts()"> -->
-     <button id="btn_pay"  onclick="buyProducts()"><i class="fas fa-shopping-cart"></i>   Mua Ngay</a></button>
+     <button id="btn_pay"  onclick="buyProducts()" style = "cursor: pointer;"><i class="fas fa-shopping-cart"></i>   Mua Ngay</a></button>
       <!-- nút xóa tất cả -->
-      <button id="btn_delAll"  onclick="delAll()">Xóa Tất Cả </button>
+      <button id="btn_delAll"  onclick="delAll()" style = "cursor: pointer;">Xóa Tất Cả </button>
   </div>
   </section>
 
